# App-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dependencies.cmake
.cache/clangd/index/: App.cpp.2EB2A9E5E75870DD.idx  App.hpp.F2CE90D9653EA3CD.idx  AppLayer.hpp.6712DD5E394F519A.idx  Layer.hpp.7033C8155483D333.idx  main.cpp.8DCCAA939BB9535D.idx
App/: CMakeLists.txt
App/include/: AppLayer.hpp
App/src/: main.cpp
Core/: CMakeLists.txt
Core/include/: App.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  Timer.hpp  UUID.hpp
Core/src/: App.cpp
old code/: Cell.hpp  Elements.hpp
old code/systems/: Heat.hpp
old code/utils/: GeneralUtils.hpp
